<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">expeditionfortreasure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonStart">Start</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="title_activity_quest">QuestActivity</string>
    <string name="title_activity_treasure">TreasureActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="greeting">Welcome to Expedition for Treasure</string>
    <string name="cityButton">Go to the city</string>
    <string name="questButton">Go to quests</string>
    <string name="treasureButton">Go to your treasures</string>
    <string name="mapButton">Go to map</string>
    <string name="citytext">This is city</string>
    <string name="levelFarm">Next level </string>
    <string name="levelTavern">Next level </string>
    <string name="levelLibrary">Level up library for </string>
    <string name="levelBarracks">Level up barracks for </string>
    <string name="nextlevel">Next level cost </string>
    <string name="questscreen">QUEST!</string>
    <string name="newquest">Get new quest</string>
    <string name="abortquest">Abort current quest</string>
    <string name="readquest">Questlog</string>
    <string name="title_activity_quest_log">QuestLogActivity</string>

</resources>
