<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView

        android:id="@+id/Greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        />

    <TextView
        android:id="@+id/GoldMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/city"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/cityButton"
        android:onClick="goToCity" >
    </Button>


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/quest"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/questButton"
        android:onClick="goToQuest" >
    </Button>


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/treasure"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/treasureButton"
        android:onClick="goToTresure" >
    </Button>


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/map"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/mapButton"
        android:onClick="goToMap" >
    </Button>


</LinearLayout>