<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lab.expeditionfortreasure.QuestActivity">

    <TextView
        android:id="@+id/questscreen"
        android:text="@string/questscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/newquest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newquest"
        android:onClick="newQuest"/>
    <Button
        android:id="@+id/abortquest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abortquest"
        android:onClick="abortQuest"/>
    <Button
        android:id="@+id/readquest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readquest"
        android:onClick="readQuest"/>


</LinearLayout>
