<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">



        <TextView
            android:id="@+id/city"
            android:text="@string/citytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cityGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button

            android:id="@+id/farmbuilding"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/levelFarm"
            android:onClick="levelUpFarm"
            style="?android:attr/borderlessButtonStyle">
        </Button>



        <Button
            android:id="@+id/tavernbuilding"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/levelTavern"
            android:onClick="levelUpTavern"
            style="?android:attr/borderlessButtonStyle">

        </Button>

        <Button
            android:id="@+id/librarybuilding"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/levelLibrary"
            android:onClick="levelUpLibrary"
            style="?android:attr/borderlessButtonStyle">
        </Button>

        <Button
            android:id="@+id/barracksbuilding"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/levelBarracks"
            android:onClick="levelUpBarracks"
            style="?android:attr/borderlessButtonStyle">

        </Button>


</LinearLayout>
